<resources>
    <string name="app_name">FirstApplication</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up">Sign Up</string>
</resources>