<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="288dp"
        android:importantForAccessibility="no"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kk" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:text="@string/login_now"

        android:textAlignment="center"

        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/please_login_to_continue_using_our_app"

app:layout_constraintBaseline_toBottomOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/textArea_information"
        android:layout_width="313dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/back"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"

        android:hint="@string/email"
        android:inputType="textMultiLine"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#393E46"

        android:textSize="25sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        />

    <EditText
        android:id="@+id/textArea_information1"
        android:layout_width="313dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/back"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"

        android:hint="@string/email"
        android:inputType="textMultiLine"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#393E46"

        android:textSize="25sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />


    <EditText
        android:id="@+id/textArea_information2"
        android:layout_width="313dp"
        android:layout_height="67dp"
        android:layout_marginTop="88dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/back"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"

        android:hint="@string/password"
        android:inputType="textMultiLine"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#393E46"

        android:textSize="25sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="294dp"
        android:layout_height="76dp"
        android:layout_marginTop="296dp"
        android:fontFamily="sans-serif-condensed"

        android:text="@string/password"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:linksClickable="true"
        android:text="@string/sign_up"
        android:textColor="#2105f5"
        android:textColorLink="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:linksClickable="true" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginTop="148dp"

        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArea_information2" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--make the screan of dialer screen
    make a calling activity
    name phone number speaker etc

    -->